# upbitAUTObot

./: .gitignore  123.md  123.txt  README.md  check_123_interval.py  monitor_123.py  qna.txt  test.py  upbit_auto_trading_design_v2.md  다음에_할_일.txt
ant_engine/: .gitignore  CMakeLists.txt  README.md
ant_engine/include/ant_engine/: engine.hpp  indicators.hpp  types.hpp
ant_engine/release/: README.md
ant_engine/scripts/: test_engine_api.py
ant_engine/src/: engine.cpp  indicators.cpp  main.cpp
backend/: .env.example  README.md  README_BAEJJANGI.md  baejjangi.py  baejjangi.spec  build_baejjangi.py  main.py  requirements.txt
config/: README.md
docs/: AI_투자전략_분산투자_알고리즘.md  API_명세서.md  APK_빌드_및_배포.md  GitHub_403_Release_업로드_해결.md  Jetson_서버_점검_체크리스트.md  Jetson_점검_결과_최근.txt  PRD_업비트_자동매매_앱.md  README.md  UI_UX_가이드_적용.md  v1.0_점검_및_출시_검토.md  v1.0_최종_점검_리스트.md  v1.0_출시_검토_보완사항.md  개미엔진_AntEngine.md  구글플레이_등록_준비.md  기획_FCM_로그인시_토큰등록.md  기획_v1.0_출시_4가지_작업.md  기획_다음단계.md  기획_매매검증_푸시_일별PnL.md  기획_서버_설치_운영.md  기획_회원가입_스텝플로우_UX.md  배포_가이드.md  서버_설치_Jetson_Tailscale.md  서버_설치_빠른시작.md  설치_및_배포_가이드.md  소스코드_최적화_검토_보고.md  시뮬레이션-2026-03-07-1회차.md  시뮬레이션_진입_보수성_분석_및_완화방안.md  에러_대응_가이드.md  온체인_정보사이트_참조.md  작업_이어하기_대화요약.md  작업_재개_가이드.md  재개_가이드.md  종목선정_비중_거래소참조.md  진입_매각_다중확인_로직.md  테스트_실행_결과_보고.md  트레이딩_로직_상세_가이드.md  트레이딩_알고리즘_기획_가이드.md  트레이딩_엔진_상세_기획서.md  트레이딩_엔진_시뮬레이션_테스트.md  트레이딩_엔진_입출력_연동_가이드.md  (+5 more)
scripts/: install.py  jetson_build_ant_engine.py  jetson_fetch_ant_engine_bin.py  jetson_full_check_and_fix.py  jetson_reinstall_fresh.py  jetson_run_tests.py  jetson_set_oauth_env.py  (+4 more)
(+93 files in other folders)
